refactored source code layout

--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -76,51 +76,51 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\ComponentPointLight.cpp" />
+    <ClCompile Include="src\components\Component.cpp" />
+    <ClCompile Include="src\components\ComponentAnimatedDrawable.cpp" />
+    <ClCompile Include="src\components\ComponentAnimationController.cpp" />
+    <ClCompile Include="src\components\ComponentAudioListener.cpp" />
+    <ClCompile Include="src\components\ComponentAudioSource.cpp" />
+    <ClCompile Include="src\components\ComponentCamera.cpp" />
+    <ClCompile Include="src\components\ComponentParticleController.cpp" />
+    <ClCompile Include="src\components\ComponentParticleSystem.cpp" />
+    <ClCompile Include="src\components\ComponentPointLight.cpp" />
+    <ClCompile Include="src\components\QuadTreeComponent.cpp" />
     <ClCompile Include="src\parsers\pugixml.cpp" />
     <ClCompile Include="src\ParticleAffectors.cpp" />
-    <ClCompile Include="src\ComponentAnimatedDrawable.cpp" />
-    <ClCompile Include="src\ComponentAnimationController.cpp" />
     <ClCompile Include="src\App.cpp" />
     <ClCompile Include="src\AudioManager.cpp" />
-    <ClCompile Include="src\ComponentAudioListener.cpp" />
-    <ClCompile Include="src\ComponentAudioSource.cpp" />
-    <ClCompile Include="src\ComponentCamera.cpp" />
-    <ClCompile Include="src\PhysicsAffectorAreaForce.cpp" />
-    <ClCompile Include="src\PhysicsAffectorConstantForce.cpp" />
-    <ClCompile Include="src\PhysicsAffectorPointForce.cpp" />
-    <ClCompile Include="src\PhysicsCollisionEdgeShape.cpp" />
-    <ClCompile Include="src\PhysicsCollisionCircleShape.cpp" />
-    <ClCompile Include="src\PhysicsCollisionPolygonShape.cpp" />
-    <ClCompile Include="src\PhysicsCollisionRectangleShape.cpp" />
-    <ClCompile Include="src\PhysicsCollisionShape.cpp" />
     <ClCompile Include="src\CommandQueue.cpp" />
-    <ClCompile Include="src\Component.cpp" />
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\FileSystem.cpp" />
     <ClCompile Include="src\FontResource.cpp" />
     <ClCompile Include="src\MessageBus.cpp" />
     <ClCompile Include="src\Music.cpp" />
-    <ClCompile Include="src\ComponentParticleController.cpp" />
-    <ClCompile Include="src\ComponentParticleSystem.cpp" />
-    <ClCompile Include="src\PhysicsContact.cpp" />
-    <ClCompile Include="src\PhysicsDebugDrawer.cpp" />
-    <ClCompile Include="src\PhysicsJointDistance.cpp" />
-    <ClCompile Include="src\PhysicsJointFriction.cpp" />
-    <ClCompile Include="src\PhysicsJointHinge.cpp" />
-    <ClCompile Include="src\PhysicsJointMotor.cpp" />
-    <ClCompile Include="src\PhysicsJointRope.cpp" />
-    <ClCompile Include="src\PhysicsJointSlider.cpp" />
-    <ClCompile Include="src\PhysicsJointWeld.cpp" />
-    <ClCompile Include="src\PhysicsJointWheel.cpp" />
-    <ClCompile Include="src\PhysicsRigidBody.cpp" />
-    <ClCompile Include="src\PhysicsWorld.cpp" />
+    <ClCompile Include="src\physics\PhysicsAffectorAreaForce.cpp" />
+    <ClCompile Include="src\physics\PhysicsAffectorConstantForce.cpp" />
+    <ClCompile Include="src\physics\PhysicsAffectorPointForce.cpp" />
+    <ClCompile Include="src\physics\PhysicsCollisionCircleShape.cpp" />
+    <ClCompile Include="src\physics\PhysicsCollisionEdgeShape.cpp" />
+    <ClCompile Include="src\physics\PhysicsCollisionPolygonShape.cpp" />
+    <ClCompile Include="src\physics\PhysicsCollisionRectangleShape.cpp" />
+    <ClCompile Include="src\physics\PhysicsCollisionShape.cpp" />
+    <ClCompile Include="src\physics\PhysicsContact.cpp" />
+    <ClCompile Include="src\physics\PhysicsDebugDrawer.cpp" />
+    <ClCompile Include="src\physics\PhysicsJointDistance.cpp" />
+    <ClCompile Include="src\physics\PhysicsJointFriction.cpp" />
+    <ClCompile Include="src\physics\PhysicsJointHinge.cpp" />
+    <ClCompile Include="src\physics\PhysicsJointMotor.cpp" />
+    <ClCompile Include="src\physics\PhysicsJointRope.cpp" />
+    <ClCompile Include="src\physics\PhysicsJointSlider.cpp" />
+    <ClCompile Include="src\physics\PhysicsJointWeld.cpp" />
+    <ClCompile Include="src\physics\PhysicsJointWheel.cpp" />
+    <ClCompile Include="src\physics\PhysicsRigidBody.cpp" />
+    <ClCompile Include="src\physics\PhysicsWorld.cpp" />
     <ClCompile Include="src\PolyBatch.cpp" />
     <ClCompile Include="src\PostBloom.cpp" />
     <ClCompile Include="src\PostChromeAb.cpp" />
     <ClCompile Include="src\PostProcess.cpp" />
     <ClCompile Include="src\QuadTree.cpp" />
-    <ClCompile Include="src\QuadTreeComponent.cpp" />
     <ClCompile Include="src\QuadTreeNode.cpp" />
     <ClCompile Include="src\Reports.cpp" />
     <ClCompile Include="src\Scene.cpp" />
@@ -130,17 +130,17 @@
     <ClCompile Include="src\SoundPlayer.cpp" />
     <ClCompile Include="src\State.cpp" />
     <ClCompile Include="src\StateStack.cpp" />
-    <ClCompile Include="src\UIButton.cpp" />
-    <ClCompile Include="src\UICheckBox.cpp" />
-    <ClCompile Include="src\UIComboBox.cpp" />
-    <ClCompile Include="src\UIContainer.cpp" />
-    <ClCompile Include="src\UIControl.cpp" />
-    <ClCompile Include="src\UILabel.cpp" />
-    <ClCompile Include="src\UIScoreList.cpp" />
-    <ClCompile Include="src\UISelection.cpp" />
-    <ClCompile Include="src\UISlider.cpp" />
-    <ClCompile Include="src\UITextBox.cpp" />
-    <ClCompile Include="src\UIWindow.cpp" />
+    <ClCompile Include="src\ui\UIButton.cpp" />
+    <ClCompile Include="src\ui\UICheckBox.cpp" />
+    <ClCompile Include="src\ui\UIComboBox.cpp" />
+    <ClCompile Include="src\ui\UIContainer.cpp" />
+    <ClCompile Include="src\ui\UIControl.cpp" />
+    <ClCompile Include="src\ui\UILabel.cpp" />
+    <ClCompile Include="src\ui\UIScoreList.cpp" />
+    <ClCompile Include="src\ui\UISelection.cpp" />
+    <ClCompile Include="src\ui\UISlider.cpp" />
+    <ClCompile Include="src\ui\UITextBox.cpp" />
+    <ClCompile Include="src\ui\UIWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\xygine\components\PointLight.hpp" />
