add wrapper class for parsing spriter xml

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -53,6 +53,9 @@ set(xygine_SRC
   ${xygine_DIR}/physics/PhysicsJointWheel.cpp
   ${xygine_DIR}/physics/PhysicsRigidBody.cpp
   ${xygine_DIR}/physics/PhysicsWorld.cpp
+  &{xygine_DIR}/spriter/SpriterDocument.cpp
+  &{xygine_DIR}/spriter/SpriterDocumentAttribute.cpp
+  &{xygine_DIR}/spriter/SpriterDocumentElement.cpp
   ${xygine_DIR}/ui/UIButton.cpp
   ${xygine_DIR}/ui/UICheckBox.cpp
   ${xygine_DIR}/ui/UIComboBox.cpp
