add spriter model class

--- a/xygine/xygine.vcxproj.filters
+++ b/xygine/xygine.vcxproj.filters
@@ -261,6 +261,9 @@
     <ClCompile Include="src\spriter\SpriterDocumentAttribute.cpp">
       <Filter>Source Files\spriter</Filter>
     </ClCompile>
+    <ClCompile Include="src\spriter\SpriterModel.cpp">
+      <Filter>Source Files\spriter</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\xygine\App.hpp">
@@ -555,6 +558,9 @@
       <Filter>Header Files\spriter</Filter>
     </ClInclude>
     <ClInclude Include="include\xygine\spriter\DocumentAttribute.hpp">
+      <Filter>Header Files\spriter</Filter>
+    </ClInclude>
+    <ClInclude Include="include\xygine\spriter\Model.hpp">
       <Filter>Header Files\spriter</Filter>
     </ClInclude>
   </ItemGroup>
