fixed typos in cmake file

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -24,7 +24,7 @@ set(xygine_SRC
   ${xygine_DIR}/StateStack.cpp
   ${xygine_DIR}/components/Component.cpp
   ${xygine_DIR}/components/ComponentAnimatedDrawable.cpp
-  ${xygine_DIR}/ComponentAnimationController.cpp 
+  ${xygine_DIR}/components/ComponentAnimationController.cpp 
   ${xygine_DIR}/components/ComponentAudioListener.cpp
   ${xygine_DIR}/components/ComponentAudioSource.cpp
   ${xygine_DIR}/components/ComponentCamera.cpp
@@ -53,10 +53,10 @@ set(xygine_SRC
   ${xygine_DIR}/physics/PhysicsJointWheel.cpp
   ${xygine_DIR}/physics/PhysicsRigidBody.cpp
   ${xygine_DIR}/physics/PhysicsWorld.cpp
-  &{xygine_DIR}/spriter/SpriterDocument.cpp
-  &{xygine_DIR}/spriter/SpriterDocumentAttribute.cpp
-  &{xygine_DIR}/spriter/SpriterDocumentElement.cpp
-  &{xygine_DIR}/spriter/SpriterModel.cpp
+  ${xygine_DIR}/spriter/SpriterDocument.cpp
+  ${xygine_DIR}/spriter/SpriterDocumentAttribute.cpp
+  ${xygine_DIR}/spriter/SpriterDocumentElement.cpp
+  ${xygine_DIR}/spriter/SpriterModel.cpp
   ${xygine_DIR}/ui/UIButton.cpp
   ${xygine_DIR}/ui/UICheckBox.cpp
   ${xygine_DIR}/ui/UIComboBox.cpp
